Polish repository documentation and hygiene