@@ -1,130 +1,132 @@
-# FutComp  
-**JavaFX Match Prediction App using Real API Data**
+# FutComp
 
-## Overview
-FutComp is a Java desktop application that predicts the stronger team between two selected football teams. It uses real data from TheSportsDB API, processes it, and applies a custom rating algorithm to generate predictions.
+[![Java 21](https://img.shields.io/badge/Java-21-ED8B00?logo=openjdk&logoColor=white)](https://openjdk.org/)
+[![JavaFX](https://img.shields.io/badge/UI-JavaFX-1f425f)](https://openjfx.io/)
+[![TheSportsDB](https://img.shields.io/badge/Data-TheSportsDB-1d9bf0)](https://www.thesportsdb.com/)
 
-This project demonstrates full-stack desktop development, including GUI design, API integration, JSON parsing, and algorithmic decision-making.
+FutComp is a JavaFX desktop application that compares football teams using
+recent match and event statistics. It combines result points, goal difference,
+shots, shots on target, and expected goals into a custom rating, then presents
+the stronger side through an interactive international- and club-team UI.
 
----
+The project demonstrates object-oriented Java design, REST API integration,
+JSON parsing, local data caching, background work for responsive interfaces,
+and multi-screen JavaFX navigation.
+
+![FutComp application preview](https://github.com/user-attachments/assets/b0e4ce8f-7e73-4d1e-8d8c-6be31b846173)
 
 ## Features
 
-- International Mode
-  - Compare national teams (Argentina, France, Brazil, etc.)
+- Compare national teams in International Mode
+- Compare clubs from the Premier League, La Liga, Serie A, Bundesliga, and Ligue 1
+- Display team names, stadiums, short names, and badges
+- Retrieve football data through TheSportsDB
+- Cache team and match data locally as JSON
+- Keep network and prediction work off the JavaFX UI thread
+- Return a clear no-data state when event statistics are unavailable
 
-- League Mode
-  - Compare club teams across major leagues  
-  - Premier League, La Liga, Serie A, Bundesliga, Ligue 1
+## Prediction model
 
-- Live Data Integration
-  - Fetches real team and match data using API
+FutComp evaluates the latest available match through three components:
 
-- Prediction System
-  - Uses match results, goal difference, and points
+```text
+match rating   = result points + (goal difference × 0.5)
+attack rating  = (goals × 2.0)
+               + (shots on target × 0.3)
+               + (total shots × 0.1)
+               + (expected goals × 1.5)
+defense rating = (goals conceded × -2.0)
+               + (opponent shots on target × -0.3)
+               + (opponent total shots × -0.1)
+               + (opponent expected goals × -1.5)
 
-- Modern UI
-  - Built with JavaFX + SceneBuilder  
-  - Clean card-based layout  
-  - Dynamic UI updates  
+final rating = match rating + attack rating + defense rating
+```
 
----
+The application compares both final ratings and identifies the stronger side.
+This is a deterministic recent-form comparison, not a probabilistic betting
+model or a guarantee of match results.
 
-## How It Works
+## Architecture
 
-### Data Flow
+```text
+JavaFX / FXML views
+        ↓
+Screen controllers
+        ↓
+Local JSON cache ← TheSportsDB HTTP client
+        ↓
+JSON parsers and domain models
+        ↓
+StatsCalc rating engine
+        ↓
+Prediction result
+```
 
-User, GUI, Controller, API, JSON, Objects, Calculation, Result, GUI
+```text
+src/futcomp/
+├── App.java                         # JavaFX entry point
+├── TitleController.java             # Mode selection and navigation
+├── InternationalController.java     # National-team comparisons
+├── LeagueController.java            # Club-team comparisons
+├── APIClass.java                    # TheSportsDB HTTP requests
+├── JsonStorage.java                 # Local cache refresh and retrieval
+├── JsonParse.java                   # API response parsing
+├── Team.java                        # Team model
+├── TeamStats.java                   # Match result model
+├── EventStats.java                  # Detailed event-stat model
+└── StatsCalc.java                   # Rating and prediction logic
+```
 
----
+## Local setup
 
-### Prediction Algorithm
+### Prerequisites
 
-Rating = Points + (Goal Difference × 0.5)
+- JDK 21
+- Apache NetBeans
+- JavaFX SDK
+- `org.json` library
+- TheSportsDB API access
 
-- Win - 3 points  
-- Draw - 1 point  
-- Loss - 0 points  
+### Configure NetBeans
 
-The team with the higher rating is predicted as stronger.
+1. Clone the repository and open it as an existing NetBeans project.
+2. Open **Project Properties → Libraries**.
+3. Point the JavaFX module path to your local JavaFX SDK.
+4. Add the `org.json` JAR to the compile classpath.
+5. Confirm the run options include:
 
----
+   ```text
+   --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml
+   ```
 
-## Project Structure
+6. Run `futcomp.App` from NetBeans.
 
-futcomp/
+The checked-in NetBeans project currently contains developer-local library
+paths, so they must be updated for another workstation.
 
-App.java: Launches JavaFX app  
-TitleController.java: Navigation between screens  
+## Data behavior
 
-InternationalController.java  
-LeagueController.java: UI + logic for both modes  
+- `data/team_data.json` stores team identity and display information.
+- `data/teamStats_data.json` stores the latest retrieved match/event statistics.
+- The cache is refreshed through TheSportsDB and used by the prediction screens.
+- API coverage and event-stat availability vary by competition and subscription.
 
-APIClass.java: Handles API requests  
-JsonParse.java: Parses JSON responses  
+## Current limitations
 
-Team.java: Team data model  
-TeamStats.java: Match statistics model  
-StatsCalc.java: Prediction logic  
+- Ratings use the latest available match rather than a multi-match rolling window.
+- The supported team list is currently defined in the application.
+- Missing detailed event data prevents a prediction.
+- The NetBeans dependency paths are machine-specific.
 
----
+## Roadmap
 
-## Notes
-
-- Only the most recent match is used due to API limitations  
-- Some team data (short name, stadium) is locally defined  
-- API inconsistencies were handled manually for stability  
-
----
-
-## Future Improvements
-
-- Use last 5 matches instead of 1  
-- Replace hardcoded team IDs with dynamic mapping  
-- Add team logos dynamically  
-- Improve prediction accuracy with better metrics  
-- Refactor shared controller logic  
-
----
-
-## Technologies Used
-
-- Java  
-- JavaFX  
-- SceneBuilder  
-- HTTP Client (Java 11+)  
-- JSON (org.json)  
-- TheSportsDB API  
-
----
+- Compare form across the last five matches
+- Replace fixed team mappings with dynamic API discovery
+- Add confidence scores and explainable rating breakdowns
+- Make dependency and API configuration portable
+- Add automated tests for parsing and rating logic
 
 ## Author
 
-Giovanni Espinoza  
-Computer Science Student  
-Farmingdale State College  
-
----
-
-## Why This Project Matters
-
-This project demonstrates:
-
-- API integration  
-- Object-oriented design  
-- GUI development (JavaFX)  
-- Multithreading (Platform.runLater)  
-- Real-world data processing  
-
---
-
-## 🔥 Preview
-
-<img width="953" height="570" alt="image" src="https://github.com/user-attachments/assets/b0e4ce8f-7e73-4d1e-8d8c-6be31b846173" />
-
-
----
-
-## 📬 Feedback
-
-Feel free to fork, improve, or suggest features!
+Built by [Giovanni Espinoza](https://github.com/GioEspinoza).
